--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="recipely_recipe_time_mock">15 Min</string>
     <string name="recipely_recipe_description_mock">Lorem Ipsum has been the industrys standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
     <string name="recipely_recipe_instruction_mock">Lorem Ipsum has been the industrys standard dummy text ever since the 1500</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
